RT2 fixed abs url in js user service and truncate text in user table

--- a/msky_money_web/WebContent/static/css/app.css
+++ b/msky_money_web/WebContent/static/css/app.css
@@ -60,3 +60,16 @@ body, .form-control {
 .field.ng-dirty.ng-invalid-maxlength {
 	background-color: yellow;
 }
+    
+.truncate-ellipsis {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    white-space: nowrap;
+}
+ 
+.truncate-ellipsis > * {
+    display: table-cell;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
